--- a/assets/sass/_sprite.scss
+++ b/assets/sass/_sprite.scss
@@ -18,10 +18,10 @@ $sprite-ico-apple-offset-x: 0px;
 $sprite-ico-apple-offset-y: 0px;
 $sprite-ico-apple-width: 141px;
 $sprite-ico-apple-height: 46px;
-$sprite-ico-apple-total-width: 141px;
+$sprite-ico-apple-total-width: 171px;
 $sprite-ico-apple-total-height: 138px;
 $sprite-ico-apple-image: '../img/sprite.png';
-$sprite-ico-apple: (0px, 0px, 0px, 0px, 141px, 46px, 141px, 138px, '../img/sprite.png', 'sprite-ico-apple', );
+$sprite-ico-apple: (0px, 0px, 0px, 0px, 141px, 46px, 171px, 138px, '../img/sprite.png', 'sprite-ico-apple', );
 $sprite-ico-google-name: 'sprite-ico-google';
 $sprite-ico-google-x: 0px;
 $sprite-ico-google-y: 46px;
@@ -29,10 +29,10 @@ $sprite-ico-google-offset-x: 0px;
 $sprite-ico-google-offset-y: -46px;
 $sprite-ico-google-width: 141px;
 $sprite-ico-google-height: 46px;
-$sprite-ico-google-total-width: 141px;
+$sprite-ico-google-total-width: 171px;
 $sprite-ico-google-total-height: 138px;
 $sprite-ico-google-image: '../img/sprite.png';
-$sprite-ico-google: (0px, 46px, 0px, -46px, 141px, 46px, 141px, 138px, '../img/sprite.png', 'sprite-ico-google', );
+$sprite-ico-google: (0px, 46px, 0px, -46px, 141px, 46px, 171px, 138px, '../img/sprite.png', 'sprite-ico-google', );
 $sprite-ico-insta-name: 'sprite-ico-insta';
 $sprite-ico-insta-x: 0px;
 $sprite-ico-insta-y: 92px;
@@ -40,15 +40,59 @@ $sprite-ico-insta-offset-x: 0px;
 $sprite-ico-insta-offset-y: -92px;
 $sprite-ico-insta-width: 141px;
 $sprite-ico-insta-height: 46px;
-$sprite-ico-insta-total-width: 141px;
+$sprite-ico-insta-total-width: 171px;
 $sprite-ico-insta-total-height: 138px;
 $sprite-ico-insta-image: '../img/sprite.png';
-$sprite-ico-insta: (0px, 92px, 0px, -92px, 141px, 46px, 141px, 138px, '../img/sprite.png', 'sprite-ico-insta', );
-$spritesheet-width: 141px;
+$sprite-ico-insta: (0px, 92px, 0px, -92px, 141px, 46px, 171px, 138px, '../img/sprite.png', 'sprite-ico-insta', );
+$sprite-red-arrow-backward-name: 'sprite-red-arrow-backward';
+$sprite-red-arrow-backward-x: 141px;
+$sprite-red-arrow-backward-y: 68px;
+$sprite-red-arrow-backward-offset-x: -141px;
+$sprite-red-arrow-backward-offset-y: -68px;
+$sprite-red-arrow-backward-width: 12px;
+$sprite-red-arrow-backward-height: 24px;
+$sprite-red-arrow-backward-total-width: 171px;
+$sprite-red-arrow-backward-total-height: 138px;
+$sprite-red-arrow-backward-image: '../img/sprite.png';
+$sprite-red-arrow-backward: (141px, 68px, -141px, -68px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-backward', );
+$sprite-red-arrow-forward-name: 'sprite-red-arrow-forward';
+$sprite-red-arrow-forward-x: 153px;
+$sprite-red-arrow-forward-y: 68px;
+$sprite-red-arrow-forward-offset-x: -153px;
+$sprite-red-arrow-forward-offset-y: -68px;
+$sprite-red-arrow-forward-width: 12px;
+$sprite-red-arrow-forward-height: 24px;
+$sprite-red-arrow-forward-total-width: 171px;
+$sprite-red-arrow-forward-total-height: 138px;
+$sprite-red-arrow-forward-image: '../img/sprite.png';
+$sprite-red-arrow-forward: (153px, 68px, -153px, -68px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-forward', );
+$sprite-yt-video-pl-hover-name: 'sprite-yt-video-pl-hover';
+$sprite-yt-video-pl-hover-x: 141px;
+$sprite-yt-video-pl-hover-y: 0px;
+$sprite-yt-video-pl-hover-offset-x: -141px;
+$sprite-yt-video-pl-hover-offset-y: 0px;
+$sprite-yt-video-pl-hover-width: 30px;
+$sprite-yt-video-pl-hover-height: 34px;
+$sprite-yt-video-pl-hover-total-width: 171px;
+$sprite-yt-video-pl-hover-total-height: 138px;
+$sprite-yt-video-pl-hover-image: '../img/sprite.png';
+$sprite-yt-video-pl-hover: (141px, 0px, -141px, 0px, 30px, 34px, 171px, 138px, '../img/sprite.png', 'sprite-yt-video-pl-hover', );
+$sprite-yt-video-pl-name: 'sprite-yt-video-pl';
+$sprite-yt-video-pl-x: 141px;
+$sprite-yt-video-pl-y: 34px;
+$sprite-yt-video-pl-offset-x: -141px;
+$sprite-yt-video-pl-offset-y: -34px;
+$sprite-yt-video-pl-width: 30px;
+$sprite-yt-video-pl-height: 34px;
+$sprite-yt-video-pl-total-width: 171px;
+$sprite-yt-video-pl-total-height: 138px;
+$sprite-yt-video-pl-image: '../img/sprite.png';
+$sprite-yt-video-pl: (141px, 34px, -141px, -34px, 30px, 34px, 171px, 138px, '../img/sprite.png', 'sprite-yt-video-pl', );
+$spritesheet-width: 171px;
 $spritesheet-height: 138px;
 $spritesheet-image: '../img/sprite.png';
-$spritesheet-sprites: ($sprite-ico-apple, $sprite-ico-google, $sprite-ico-insta, );
-$spritesheet: (141px, 138px, '../img/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($sprite-ico-apple, $sprite-ico-google, $sprite-ico-insta, $sprite-red-arrow-backward, $sprite-red-arrow-forward, $sprite-yt-video-pl-hover, $sprite-yt-video-pl, );
+$spritesheet: (171px, 138px, '../img/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
