--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -289,7 +289,6 @@ header {
   padding: 70px 0 100px;
 
   background-color: #f6f6f6;
-
   h2 {
     @extend .heading;
   }
@@ -378,6 +377,8 @@ header {
       font-size: 14px;
       line-height: 3;
 
+      position: relative;
+
       display: inline-block;
       float: left;
 
@@ -390,7 +391,6 @@ header {
 
       color: #000;
       background-color: #fff;
-      &:nth-child(2),
       &:nth-child(6),
       &:nth-child(7),
       &:nth-child(9),
@@ -398,6 +398,34 @@ header {
         line-height: 2;
 
         padding-top: 58px;
+      }
+      &:nth-child(2),
+      &:nth-child(4),
+      &:nth-child(6),
+      &:nth-child(7),
+      &:nth-child(9),
+      &:nth-child(11) {
+        &:before {
+          position: absolute;
+          top: 70px;
+          left: 0;
+
+          display: block;
+
+          content: '';
+
+          @include sprite($sprite-red-arrow-forward);
+        }
+      }
+      &:nth-child(7),
+      &:nth-child(9),
+      &:nth-child(11) {
+        &:before {
+          right: 0;
+          left: auto;
+
+          @include sprite($sprite-red-arrow-backward);
+        }
       }
       &:first-child,
       &:nth-child(3),
@@ -417,7 +445,110 @@ header {
     }
   }
 }
+.video-block {
+  padding: 100px 0;
 
+  background-color: #141b2d;
+  .yt-video {
+    position: relative;
+
+    display: block;
+
+    height: 500px;
+
+    border-radius: 4px;
+
+    @extend .inner;
+    &:before {
+      position: absolute;
+      z-index: 15;
+      top: 190px;
+      left: 440px;
+
+      display: block;
+
+      width: 120px;
+      height: 120px;
+
+      content: '';
+
+      border-radius: 50%;
+      background-color: #fff;
+    }
+    &:after {
+      position: absolute;
+      z-index: 20;
+      top: 233px;
+      left: 485px;
+
+      display: block;
+
+      content: '';
+
+      @include sprite($sprite-yt-video-pl);
+    }
+    img {
+      opacity: .8;
+      border-radius: 4px;
+    }
+    &:hover {
+      img {
+        opacity: 1;
+      }
+      &:before {
+        background-color: #f02337;
+      }
+      &:after {
+        @include sprite($sprite-yt-video-pl-hover);
+      }
+    }
+  }
+}
+.speakers {
+  padding: 65px 0 45px;
+
+  background-color: #f02337;
+  h2 {
+    color: #fff;
+
+    @extend .heading;
+  }
+  ul {
+    min-height: 315px;
+    margin: 0;
+    padding: 0;
+    li {
+      display: inline-block;
+
+      width: 200px;
+      margin: 0;
+      padding: 0;
+
+      text-align: center;
+      color: #fff;
+      img {
+        width: 100%;
+        height: 200px;
+        margin: 0 20px;
+      }
+      h5 {
+        font-size: 14px;
+        font-weight: 500;
+
+        margin: 0 0 10px;
+      }
+      p {
+        font-size: 12px;
+        line-height: 2;
+padding: 0 15px;
+        margin: 0;
+        a{
+          color: #fff;
+        }
+      }
+    }
+  }
+}
 
 
 footer {
