--- a/assets/sass/_sprite.scss
+++ b/assets/sass/_sprite.scss
@@ -11,6 +11,28 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$sprite-bx-pager-next-name: 'sprite-bx-pager-next';
+$sprite-bx-pager-next-x: 141px;
+$sprite-bx-pager-next-y: 68px;
+$sprite-bx-pager-next-offset-x: -141px;
+$sprite-bx-pager-next-offset-y: -68px;
+$sprite-bx-pager-next-width: 13px;
+$sprite-bx-pager-next-height: 23px;
+$sprite-bx-pager-next-total-width: 171px;
+$sprite-bx-pager-next-total-height: 138px;
+$sprite-bx-pager-next-image: '../img/sprite.png';
+$sprite-bx-pager-next: (141px, 68px, -141px, -68px, 13px, 23px, 171px, 138px, '../img/sprite.png', 'sprite-bx-pager-next', );
+$sprite-bx-pager-prev-name: 'sprite-bx-pager-prev';
+$sprite-bx-pager-prev-x: 154px;
+$sprite-bx-pager-prev-y: 68px;
+$sprite-bx-pager-prev-offset-x: -154px;
+$sprite-bx-pager-prev-offset-y: -68px;
+$sprite-bx-pager-prev-width: 13px;
+$sprite-bx-pager-prev-height: 23px;
+$sprite-bx-pager-prev-total-width: 171px;
+$sprite-bx-pager-prev-total-height: 138px;
+$sprite-bx-pager-prev-image: '../img/sprite.png';
+$sprite-bx-pager-prev: (154px, 68px, -154px, -68px, 13px, 23px, 171px, 138px, '../img/sprite.png', 'sprite-bx-pager-prev', );
 $sprite-ico-apple-name: 'sprite-ico-apple';
 $sprite-ico-apple-x: 0px;
 $sprite-ico-apple-y: 0px;
@@ -46,26 +68,26 @@ $sprite-ico-insta-image: '../img/sprite.png';
 $sprite-ico-insta: (0px, 92px, 0px, -92px, 141px, 46px, 171px, 138px, '../img/sprite.png', 'sprite-ico-insta', );
 $sprite-red-arrow-backward-name: 'sprite-red-arrow-backward';
 $sprite-red-arrow-backward-x: 141px;
-$sprite-red-arrow-backward-y: 68px;
+$sprite-red-arrow-backward-y: 91px;
 $sprite-red-arrow-backward-offset-x: -141px;
-$sprite-red-arrow-backward-offset-y: -68px;
+$sprite-red-arrow-backward-offset-y: -91px;
 $sprite-red-arrow-backward-width: 12px;
 $sprite-red-arrow-backward-height: 24px;
 $sprite-red-arrow-backward-total-width: 171px;
 $sprite-red-arrow-backward-total-height: 138px;
 $sprite-red-arrow-backward-image: '../img/sprite.png';
-$sprite-red-arrow-backward: (141px, 68px, -141px, -68px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-backward', );
+$sprite-red-arrow-backward: (141px, 91px, -141px, -91px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-backward', );
 $sprite-red-arrow-forward-name: 'sprite-red-arrow-forward';
 $sprite-red-arrow-forward-x: 153px;
-$sprite-red-arrow-forward-y: 68px;
+$sprite-red-arrow-forward-y: 91px;
 $sprite-red-arrow-forward-offset-x: -153px;
-$sprite-red-arrow-forward-offset-y: -68px;
+$sprite-red-arrow-forward-offset-y: -91px;
 $sprite-red-arrow-forward-width: 12px;
 $sprite-red-arrow-forward-height: 24px;
 $sprite-red-arrow-forward-total-width: 171px;
 $sprite-red-arrow-forward-total-height: 138px;
 $sprite-red-arrow-forward-image: '../img/sprite.png';
-$sprite-red-arrow-forward: (153px, 68px, -153px, -68px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-forward', );
+$sprite-red-arrow-forward: (153px, 91px, -153px, -91px, 12px, 24px, 171px, 138px, '../img/sprite.png', 'sprite-red-arrow-forward', );
 $sprite-yt-video-pl-hover-name: 'sprite-yt-video-pl-hover';
 $sprite-yt-video-pl-hover-x: 141px;
 $sprite-yt-video-pl-hover-y: 0px;
@@ -91,7 +113,7 @@ $sprite-yt-video-pl: (141px, 34px, -141px, -34px, 30px, 34px, 171px, 138px, '../
 $spritesheet-width: 171px;
 $spritesheet-height: 138px;
 $spritesheet-image: '../img/sprite.png';
-$spritesheet-sprites: ($sprite-ico-apple, $sprite-ico-google, $sprite-ico-insta, $sprite-red-arrow-backward, $sprite-red-arrow-forward, $sprite-yt-video-pl-hover, $sprite-yt-video-pl, );
+$spritesheet-sprites: ($sprite-bx-pager-next, $sprite-bx-pager-prev, $sprite-ico-apple, $sprite-ico-google, $sprite-ico-insta, $sprite-red-arrow-backward, $sprite-red-arrow-forward, $sprite-yt-video-pl-hover, $sprite-yt-video-pl, );
 $spritesheet: (171px, 138px, '../img/sprite.png', $spritesheet-sprites, );
 
 /*
