--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -79,6 +79,7 @@ a {
   min-height: 100%;
   margin: 0 auto;
 }
+
 .inner {
   position: relative;
 
@@ -107,9 +108,12 @@ header {
 
     width: 121px;
     height: 41px;
-    img {
+    .logo-img {
       width: 121px;
       height: 41px;
+    }
+    .logo-img-320 {
+      display: none;
     }
   }
   nav {
@@ -134,6 +138,9 @@ header {
 
         content: '';
       }
+    }
+    .nav-320 {
+      display: none;
     }
     li {
       font-size: medium;
@@ -840,24 +847,24 @@ header {
 
         @extend .fa;
       }
-      &:first-child {
+      &.targets-sliders-1 {
         &:after {
           top: 30px;
 
           content: '';
         }
       }
-      &:nth-child(2) {
+      &.targets-sliders-2 {
         &:after {
           content: '';
         }
       }
-      &:nth-child(3) {
+      &.targets-sliders-3 {
         &:after {
           content: '';
         }
       }
-      &:last-child {
+      &.targets-sliders-4 {
         &:after {
           left: 79px;
 
@@ -1062,6 +1069,9 @@ header {
   background-color: #f6f6f6;
   h2 {
     @extend .heading;
+  }
+  .price-320 {
+    display: none;
   }
   table {
     margin-bottom: 40px;
@@ -1388,9 +1398,11 @@ header {
     @extend .inner;
     tr {
       td {
+        overflow: hidden;
+
         width: 50%;
         padding: 0;
-overflow: hidden;
+
         text-align: center;
         vertical-align: middle;
 
@@ -1400,7 +1412,7 @@ overflow: hidden;
           width: 100%;
           height: 350px;
 
-          transition: all 0.7s;
+          transition: all .7s;
         }
         h4 {
           font-size: 18px;
@@ -1420,10 +1432,12 @@ overflow: hidden;
           color: #000;
         }
         a {
-          text-decoration: none;
           display: block;
+
           width: 100%;
           height: 100%;
+
+          text-decoration: none;
         }
       }
       &:hover {
@@ -1884,5 +1898,492 @@ opacity: 1 !important; */
   .qtip-titlebar .qtip-close {
     color: #111;
     border-color: #aaa;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 340px) {
+  .inner {
+    width: 100%;
+    min-width: 320px;
+    max-width: 340px;
+  }
+  .heading {
+    font-size: 34px;
+    font-weight: normal;
+
+    margin: 0 auto 20px;
+  }
+  header {
+    height: 60px;
+    .logo {
+      top: 8px;
+      left: 20px;
+
+      width: 97px;
+      height: 33px;
+      .logo-img {
+        display: none;
+      }
+      .logo-img-320 {
+        display: block;
+      }
+    }
+    nav {
+      display: none;
+    }
+  }
+
+  .headliner {
+    height: 420px;
+    padding: 15px 0 40px;
+    h6 {
+      line-height: 1.8;
+
+      margin: 0 0 18px;
+      padding: 0 90px 45px;
+
+      background-image: url(../img/headliner-logo-320.png);
+      i {
+        display: block;
+
+        width: 20px;
+        margin: 0 auto 8px;
+
+        text-align: center;
+      }
+    }
+    p {
+      font-size: 14px;
+      font-weight: lighter;
+      line-height: 1.8;
+
+      margin: 0 auto 25px;
+      padding: 0 40px;
+
+      text-align: center;
+    }
+  }
+
+  .software {
+    padding: 30px 0 40px;
+    .inner {
+      padding: 0 38px;
+    }
+    p {
+      font-size: 12px;
+      font-weight: 500;
+
+      float: none;
+
+      width: 100%;
+      margin: 0 auto 20px;
+      padding: 0;
+
+      text-align: center;
+    }
+    ul {
+      display: block;
+      float: none;
+
+      width: 100%;
+      li {
+        width: 110px;
+        margin: 0;
+
+        border-radius: 8px;
+        a {
+          border-radius: 8px;
+        }
+      }
+      .soft-1 {
+        margin-right: 10px;
+      }
+      .soft-3 {
+        display: none;
+      }
+    }
+  }
+
+  .how-it-was {
+    padding: 35px 0 40px;
+    .etabs {
+      position: relative;
+
+      width: 100%;
+      margin: 0 auto 40px;
+
+      text-align: center;
+    }
+    .how-it-was-photo,
+    .how-it-was-cifres {
+      width: 100%;
+    }
+    .how-it-was-photo {
+      height: 360px;
+      margin-bottom: -40px;
+      img {
+        height: 100%;
+      }
+    }
+    .how-it-was-cifres {
+      height: 280px;
+    }
+  }
+  .video-block {
+    height: 240px;
+    padding: 0;
+    .yt-video {
+      width: 100%;
+      height: 100%;
+      &:before {
+        top: 90px;
+        left: 130px;
+
+        width: 60px;
+        height: 60px;
+      }
+      &:after {
+        top: 103px;
+        left: 148px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  .speakers {
+    padding: 30px 0;
+    .bx-wrapper {
+      .bx-controls {
+        display: none;
+      }
+    }
+    .view-all {
+      display: none;
+    }
+  }
+  .targets {
+    padding: 35px 0 40px;
+    ul {
+      width: 240px;
+      max-width: none;
+      height: 220px;
+      min-height: 220px;
+      margin: 0 auto 15px;
+      li {
+        width: 240px;
+        height: 220px;
+        &:before {
+        }
+        &:after {
+        }
+      }
+    }
+    .bx-controls {
+      position: relative;
+
+      width: 114px;
+      height: 23px;
+      margin: 0 auto;
+      .bx-pager {
+        font-size: 12px;
+        font-weight: bold;
+        line-height: 2;
+
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+      }
+      .bx-controls-direction {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        .bx-prev,
+        .bx-next {
+          font-size: 0;
+
+          position: absolute;
+          top: 0;
+
+          text-indent: -9999px;
+
+          outline: 0;
+          &:before {
+            display: block;
+
+            content: '';
+          }
+        }
+        .bx-prev {
+          left: 0;
+          &:before {
+            @include sprite($sprite-bx-pager-prev);
+          }
+        }
+        .bx-next {
+          right: 0;
+          &:before {
+            @include sprite($sprite-bx-pager-next);
+          }
+        }
+      }
+    }
+    .bx-wrapper {
+      width: 240px;
+      margin: 0 auto 15px;
+    }
+  }
+  .participants {
+    padding: 35px 0 15px;
+    ul {
+      width: 240px;
+      min-width: 0;
+      margin: 0 auto;
+      li {
+        font-size: 14px;
+        line-height: 1.4;
+
+        width: 100%;
+        margin: 0 0 20px;
+        padding: 0 0 0 20px;
+        &:before {
+          background-color: #000;
+        }
+      }
+    }
+  }
+  .reviews {
+    padding: 30px 0;
+    .reviews-slider {
+      width: 240px;
+    }
+    .bx-wrapper {
+      width: 240px;
+      margin: 0 auto;
+    }
+    ul {
+      li {
+        padding: 230px 0 0;
+        img {
+          top: 0;
+          left: 20px;
+        }
+        h4 {
+          font-size: 14px;
+
+          margin: 0 auto 16px;
+
+          text-align: center;
+        }
+        h5 {
+          font-size: 12px;
+          line-height: 2;
+
+          margin: 0 40px 30px;
+
+          text-align: center;
+        }
+        blockquote {
+          margin: 0 auto 30px;
+          padding: 40px 0 0;
+          &:before {
+            top: 0;
+            left: 106px;
+          }
+        }
+      }
+    }
+  }
+  .price {
+    padding: 40px 0 35px;
+    table {
+      display: none;
+    }
+    .price-320 {
+      display: block;
+
+      width: 240px;
+      margin: 0 auto 22px;
+      li {
+        display: block;
+
+        width: 100%;
+
+        text-align: center;
+
+        border: 1px solid #f02337;
+        div {
+          font-size: 12px;
+          font-weight: 500;
+          line-height: 3;
+
+          position: relative;
+
+          width: 100%;
+          height: 70px;
+
+          color: #000;
+          border-bottom: 1px solid grey;
+          &:first-child {
+            font-size: 14px;
+
+            height: 80px;
+
+            color: #fff;
+            background-color: #f02337;
+            &:before,
+            &:after {
+              display: none !important;
+            }
+          }
+          &:nth-child(2) {
+            font-size: 18px;
+            line-height: 2;
+
+            height: 40px;
+
+            color: #e4374b;
+            &:before,
+            &:after {
+              display: none !important;
+            }
+          }
+          &:before,
+          &:after {
+            position: absolute;
+
+            display: block;
+
+            @extend .fa;
+          }
+          &:before {
+            top: 35px;
+            left: 106px;
+
+            width: 26px;
+            height: 26px;
+
+            content: '';
+
+            border-radius: 50%;
+            background-color: #141b2d;
+          }
+          &:after {
+            top: 42px;
+            left: 114px;
+
+            content: '';
+
+            color: #fff;
+          }
+          &.checked {
+            &:before {
+              background-color: #f02337;
+            }
+            &:after {
+              content: '';
+            }
+          }
+        }
+      }
+    }
+    .bx-controls {
+      position: relative;
+
+      width: 114px;
+      height: 23px;
+      margin: 0 auto;
+      .bx-pager {
+        font-size: 12px;
+        font-weight: bold;
+        line-height: 2;
+
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+      }
+      .bx-controls-direction {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        .bx-prev,
+        .bx-next {
+          font-size: 0;
+
+          position: absolute;
+          top: 0;
+
+          text-indent: -9999px;
+
+          outline: 0;
+          &:before {
+            display: block;
+
+            content: '';
+          }
+        }
+        .bx-prev {
+          left: 0;
+          &:before {
+            @include sprite($sprite-bx-pager-prev);
+          }
+        }
+        .bx-next {
+          right: 0;
+          &:before {
+            @include sprite($sprite-bx-pager-next);
+          }
+        }
+      }
+    }
+    .bx-wrapper {
+      width: 240px;
+      margin: 0 auto 15px;
+    }
+  }
+
+  .programm {
+    padding: 35px 20px 5px;
+    .programm {
+      .programm-tabs-day-1,
+      .programm-tabs-day-2,
+      .programm-tabs-day-3 {
+        column-count: none;
+        column-gap: 0;
+      }
+    }
+  }
+
+  header,
+  .headliner,
+  .software,
+  .how-it-was,
+  .video-block,
+  .targets,
+  .participants,
+  .reviews,
+  .price,
+  .speakers {
+    display: none;
+  }
+
+
+
+  .organizators,
+  .partners,
+  .where-buy,
+  .maps,
+  .contacts,
+  footer, {
+    display: none;
   }
 }
