--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -367,6 +367,22 @@ header {
   }
   .how-it-was-photo {
     height: 500px;
+    ul {
+      display: block;
+
+      width: 100%;
+      height: 100%;
+      li {
+        display: block;
+
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
   .how-it-was-cifres {
     width: 996px;
@@ -2352,38 +2368,250 @@ opacity: 1 !important; */
   }
 
   .programm {
-    padding: 35px 20px 5px;
-    .programm {
-      .programm-tabs-day-1,
-      .programm-tabs-day-2,
-      .programm-tabs-day-3 {
-        column-count: none;
-        column-gap: 0;
+    position: relative;
+
+    width: 540px;
+    padding: 35px 0 66px 50px;
+    .programm-tabs-day-1,
+    .programm-tabs-day-2,
+    .programm-tabs-day-3 {
+      margin-right: 140px !important;
+      margin-bottom: 20px;
+      margin-left: -130px !important;
+      padding: 0 20px 20px;
+
+      background-color: #fff;
+
+      column-count: auto;
+      column-gap: auto;
+      h4 {
+        font-size: 14px;
+      }
+      ul {
+        li {
+          &:before {
+            background-color: #000;
+          }
+        }
+      }
+    }
+    .programm-tabs-day-1 {
+    }
+    .etabs {
+      width: 540px;
+      margin-left: -50px !important;
+    }
+    .dl-programm {
+      position: absolute;
+      bottom: 20px;
+      left: 70px;
+    }
+  }
+  .organizators {
+    padding: 35px 0 0;
+    table {
+      display: none;
+    }
+    ul {
+      display: block;
+
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      li {
+        font-size: 14px;
+        line-height: 1.4;
+
+        position: relative;
+
+        display: block;
+
+        width: 100%;
+        padding: 40px;
+
+        text-align: center;
+
+        background-color: #fff;
+        h4 {
+          margin: 0 0 20px;
+
+          color: #e4374b;
+        }
+        a {
+          text-decoration: none;
+        }
+      }
+      .organizators1,
+      .organizators3,
+      .organizators5 {
+        height: 180px;
+        padding: 0;
+        &:after {
+          position: absolute;
+          z-index: 10;
+          bottom: 0;
+          left: 150px;
+
+          width: 0;
+          height: 0;
+
+          -webkit-transform: rotate(360deg);
+
+          border-width: 0 11.5px 13px 11.5px;
+          border-style: solid;
+          border-style: inset;
+          border-color: transparent transparent #fff transparent;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
+  .partners {
+    padding: 40px 0;
+    h5 {
+      margin-bottom: 25px;
+    }
+    ul {
+      width: 240px;
+      min-width: 240px;
+      margin: 0 auto 40px;
 
-  header,
-  .headliner,
-  .software,
-  .how-it-was,
-  .video-block,
-  .targets,
-  .participants,
-  .reviews,
-  .price,
-  .speakers {
-    display: none;
+      text-align: center;
+    }
+    .partner-sponsors,
+    .partner-general {
+      li {
+        display: none;
+
+        margin: 0 auto 10px;
+        img {
+          margin-top: -15px;
+        }
+        span {
+          font-size: 12px;
+
+          display: block;
+
+          padding: 90px 0 0;
+
+          opacity: 1;
+          color: #000;
+          border-color: transparent;
+          background-color: transparent;
+          h4 {
+            display: none;
+          }
+          p {
+            margin: 0 0 10px;
+          }
+          a {
+            color: #f02337;
+          }
+        }
+        &:first-child,
+        &:nth-child(2),
+        &:last-child {
+          display: block;
+        }
+      }
+    }
+    .partner-general {
+      li {
+        &:last-child {
+          display: none;
+        }
+      }
+    }
+    .partner-organiz-hd,
+    .partner-inform-hd,
+    .partner-inform,
+    .partner-organiz {
+      display: none;
+    }
+  }
+  .where-buy {
+    padding: 35px 0 40px;
+    .inner {
+      padding: 0;
+    }
+    h4 {
+      font-size: 18px;
+      font-weight: 500;
+
+      margin: 0 auto 20px;
+
+      text-align: center;
+    }
+    p {
+      font-size: 16px;
+      font-weight: normal;
+      line-height: 1.3;
+
+      width: 100%;
+      margin: 0 0 20px;
+      padding: 0 60px;
+
+      text-align: center;
+    }
+    .buy-ticket {
+      position: relative;
+      top: 0;
+      right: 0;
+
+      margin: 0 auto;
+    }
   }
 
+  .maps {
+    height: 320px;
+    .marker {
+      top: 40px;
+      left: 12.5%;
+    }
+  }
+  .contacts {
+    padding: 40px 0 0;
+    ul {
+      width: 240px;
+      min-width: 240px;
+      margin: 0 auto;
+    }
+    li {
+      display: block;
 
+      width: 100%;
+      margin: 0 0 20px;
+      h4 {
+        font-size: 14px;
+      }
+    }
+  }
+  footer {
+    height: 480px;
+    .mainfooter {
+      width: 100%;
+      padding: 260px 0 40px;
 
-  .organizators,
-  .partners,
-  .where-buy,
-  .maps,
-  .contacts,
-  footer, {
-    display: none;
+      background-position: center 35px;
+      .iwannabearepartner,
+      .dload {
+        position: relative;
+        top: 0;
+        left: 0;
+
+        margin: 0 auto 20px;
+      }
+      .iwannabearepartner {
+      }
+      .dload {
+        padding-bottom: 45px;
+      }
+      p {
+        color: #fff;
+      }
+    }
   }
 }
